# ose

./: COPYING  INSTALL  LICENSE  Makefile  PACKAGE  README  README.md  config.mk.in  configure  configure.ac  modules.mk  options.mk  rules.mk  settings.mk  setup.mk  setup.py
examples/apache/: .htaccess  README  details.html  details.py  index.html  iso3166.csv  iso3166.py  mptest.py  source.html  source.py
examples/apache/_mputils/: apache.py  cache.py  markup.py  table.html  table.py
examples/exchange/: Makefile  Makefile.d  client-request.py  exchange-network.cc  exchange-network.py  exchange.cc  exchange.py  group-monitor.py  netrpc-gateway.cc  netrpc-gateway.py  registry-monitor.py  service-monitor.py  service-reports.cc  service-reports.py  service-request.cc  service-request.py  service.cc  service.py  soap-gateway.py  xmlrpc-gateway.cc  xmlrpc-gateway.py
examples/netrpc/: functions.py  netrpc-client.py  netrpc-debugger.py  netrpc-server.cgi  netrpc-to-soap.cgi  netrpc-to-xmlrpc.cgi  netsvc-service.py  soap-client.py  soap-debugger.py  soap-server.cgi  soap-to-netrpc.cgi  soap-to-xmlrpc.cgi  xmlrpc-client.py  xmlrpc-debugger.py  xmlrpc-server.cgi  xmlrpc-to-netrpc.cgi  xmlrpc-to-soap.cgi  zsi-client.py  zsi-server.py
examples/netspy/: AgentCatalog.py  AgentMonitor.py  AgentWindow.py  GroupCatalog.py  ProgramStartup.py  RegistryLogger.py  RegistryMonitor.py  ReportService.py  ReportViewer.py  ServiceCatalog.py  ServiceMonitor.py  ServiceWindow.py  netspy-registry.py  netspy-reports.py  netspy.py
examples/sockets/: Makefile  Makefile.d  README  chargen-server.cc  daytime-server.cc  echo-server.cc  echo-server.py  read-client.cc  read-client.py  write-client.cc  write-client.py
examples/validate/: IntrospectTests.py  Makefile  Makefile.d  ValidatorService.cc  ValidatorService.hh  ValidatorTests.py  _ValidatorService.cc  callback-client.py  callback-service.py  exchange-validator.py  introspect-service.py  netrpc-introspect.py  netrpc-validator.py  transient-client.py  transient-service.py  validator-service.py  xmlrpc-introspect.py  xmlrpc-validator.py
include/: Makefile
include/ONS/: Makefile
include/ONS/agent/: Makefile  actioncb.hh  actvrqst.hh  agent.hh  (+26 more)
include/OSE/: Makefile  OSE.h  compile.h  config.h.in  export.h  i386-pc-win32.h  system.h  version.h  version.h.in
include/OTC/: Makefile  OTC.h
makeit/: INSTALL  LICENSE  Makefile.in  PACKAGE  PORTING  README  configure  configure.ac
makeit/makeit/: modules.mk  setup.mk
makeit/modules/: c.mk  cxx.mk  lex.mk  makeit.d  rpcgen.mk  sh.mk  yacc.mk
makeit/samples/i386-unknown-freebsd/: i386-unknown-freebsd-compiler-gcc2.95.X.mk  i386-unknown-freebsd-platform-gcc2.95.X.mk
makeit/samples/i686-pc-cygwin/: i686-pc-cygwin-compiler-gcc3.X.mk  i686-pc-cygwin-compiler-xc-i386-pc-win32-vc7.0.mk  i686-pc-cygwin-platform-xc-i386-pc-win32-vc7.0.mk  i686-pc-cygwin-targets-xc-i386-pc-win32-vc7.0.mk
makeit/samples/i686-pc-linux-gnu/: i686-pc-linux-gnu-compiler-gcc2.95.X.mk  i686-pc-linux-gnu-compiler-gcc3.X.mk  i686-pc-linux-gnu-platform-gcc3.X.mk
makeit/samples/powerpc-apple-darwin/: powerpc-apple-darwin-compiler-gcc2.95.2.mk  powerpc-apple-darwin-compiler-gcc3.1.mk  powerpc-apple-darwin-compiler-gcc3.3.mk
makeit/samples/sparc-sun-solaris/: sparc-sun-solaris-compiler-gcc2.95.X.mk  sparc-sun-solaris-compiler-gcc3.X.mk  sparc-sun-solaris-compiler-sun5.X.mk  sparc-sun-solaris-platform-gcc3.X.mk  sparc-sun-solaris-targets-sun5.X.mk
makeit/scripts/: makeit.sh.in
makeit/targets/: depend.mk  depend.sed  install.mk  lib.mk  pic.mk  programs.mk  setup.mk
makeit/testing/: Makefile  exclude1.cc  exclude2.c  libsrc1.cc  libsrc2.c  nonlibsrc1.cc  nonlibsrc2.c  program1.cc  program2.c
modules/: check.mk  ose.d  ose.mk.in  ose.pkg.in
netrpc/: __init__.py  common.py  remote.py  soap.py  xmlrpc.py
netsvc/: __init__.py
netsvc/apache/: __init__.py
netsvc/cache/: __init__.py
netsvc/client/: __init__.py
netsvc/soap/: __init__.py
netsvc/xmlrpc/: __init__.py  python.py
python/: agent.hh  dispatch.hh  echosrvl.hh  exchange.hh  exchannc.hh  failure.hh  filesrvl.hh  filesrvr.hh  httpdaem.hh  httpsrvl.hh  httpsrvr.hh  httpsssn.hh  job.hh  logger.hh  module.hh  monitor.hh  opaque.hh  opyagent.cc  opydispatch.cc  opyechosrvl.cc  opyexchange.cc  opyexchannc.cc  opyfailure.cc  opyfilesrvl.cc  opyfilesrvr.cc  opyhttpdaem.cc  opyhttpsrvl.cc  opyhttpsrvr.cc  opyhttpsssn.cc  opyjob.cc  opylogger.cc  opymodule.cc  opymonitor.cc  opyopaque.cc  opypbntfctn.cc  opyprogram.cc  opyreport.cc  opyrequest.cc  opyresponse.cc  opyrpcgtway.cc  (+19 more)
win32/: README  create.py  debug-mt.mk  debug.mk  objects.mk  release-mt.mk  release.mk  rules.mk
zsirpc/: __init__.py
(+335 files in other folders)
